--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@ table{
 		   <tr>
 			   <td>
 					<p>&nbsp&nbsp
-					期望得到一份互联网应用开发相关职位，可从事业务层开发，数据层构建，ERP系统二次开发，UI设计；个人发展方向-物联网开发</p>
+					期望得到一份互联网应用开发相关职位，可从事业务层开发、数据层构建、二次开发、UI设计;
+					</p>
 			   </td>
 		   </tr>
 	   </table>
