--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ table{
 		   <tr>
 			   <td>
 					<p>&nbsp&nbsp
-					期望得到一份互联网应用开发相关职位，可从事业务层开发、数据层构建、二次开发、UI设计;
+					期望得到一份互联网应用开发相关职位，可从事业务层开发、数据层构建、二次开发、UI设计; 更希望能进入嵌入式开发领域;
 					</p>
 			   </td>
 		   </tr>
